--- a/bpath.cabal
+++ b/bpath.cabal
@@ -16,6 +16,8 @@ extra-doc-files:
   CHANGELOG.md
   README.md
 
+tested-with:     GHC ==8.10.3
+
 common common-attrs
   build-depends:      base >=4.10 && <5
   default-language:   Haskell2010
